; ModuleID = '/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lmathlib.c_math_type.c'
source_filename = "/home/carl/AnghaBench/mjolnir/Mjolnir/lua/extr_lmathlib.c_math_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_TNUMBER = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"integer\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"float\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @math_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @math_type(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call i64 @lua_type(i32* %3, i32 1)
  %5 = load i64, i64* @LUA_TNUMBER, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %18

7:                                                ; preds = %1
  %8 = load i32*, i32** %2, align 8
  %9 = call i64 @lua_isinteger(i32* %8, i32 1)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %7
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @lua_pushliteral(i32* %12, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  br label %17

14:                                               ; preds = %7
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @lua_pushliteral(i32* %15, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  br label %17

17:                                               ; preds = %14, %11
  br label %23

18:                                               ; preds = %1
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @luaL_checkany(i32* %19, i32 1)
  %21 = load i32*, i32** %2, align 8
  %22 = call i32 @lua_pushnil(i32* %21)
  br label %23

23:                                               ; preds = %18, %17
  ret i32 1
}

declare dso_local i64 @lua_type(i32*, i32) #1

declare dso_local i64 @lua_isinteger(i32*, i32) #1

declare dso_local i32 @lua_pushliteral(i32*, i8*) #1

declare dso_local i32 @luaL_checkany(i32*, i32) #1

declare dso_local i32 @lua_pushnil(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
